Updated UI to handle OIDC method changes

--- a/ui/app/templates/settings/tokens.hbs
+++ b/ui/app/templates/settings/tokens.hbs
@@ -82,7 +82,7 @@
                   class="button is-primary"
                   onclick={{action "redirectToSSO" method}}
                   type="button"
-                >Sign in with with {{method.name}}
+                >Sign in with {{method.name}}
                 </button>
               {{/each}}
             </div>
